--- a/_layouts/redirected.html
+++ b/_layouts/redirected.html
@@ -6,5 +6,6 @@
 <meta http-equiv="refresh" content="0;url={{ page.redirect_to }}" />
 </head>
 <body>
+    <script>location='{{ page.redirect_to }}'</script>
 </body>
 </html>
