add 301 Moved in redirected.html

--- a/_layouts/redirected.html
+++ b/_layouts/redirected.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<link rel="canonical" href="{{ page.redirect_to }}"/>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="refresh" content="0;url={{ page.redirect_to }}" />
+<title>301 Moved</title>
 </head>
 <body>
-    <h1>Redirecting...</h1>
-    <a href="{{ page.redirect_to }}">Click here if you are not redirected.</a>
-    <script>location='{{ page.redirect_to }}'</script>
+    <h1>301 Moved</h1> The document has moved
+    <a href="{{ page.redirect_to }}">here</a>
 </body>
 </html>
