fix: correct utteranc.es repo name

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,7 +1,7 @@
 {% if page.exclude_comments != true %}
 	<br>
 	<script src="https://utteranc.es/client.js"
-		repo="bhavidhingra/just-my-docs"
+		repo="custom-git/custom-git.github.io"
 		issue-term="pathname"
 		label="webpage-comments"
 		theme="github-light"
